--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -71,7 +71,7 @@ $component-box-shadow: 0px 3px 6px -2px $component-box-shadow-color !default;
 $component-outline: 0 0 1rem $component-outline-color !default;
 
 // Z-Indexes
-$z-index-fixed: 1000 !default;
+$zindex-fixed: 1500 !default;
 
 // Breakpoints
 $breakpoint-xs: 576px !default;
